[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Screens/PlayerCreation.gd" type="Script" id=1]
[ext_resource path="res://src/UI/ChangeSceneButton.tscn" type="PackedScene" id=2]

[node name="PlayerCreation" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
margin_left = 588.17
margin_top = 226.737
margin_right = 695.17
margin_bottom = 240.737
text = "Enter Your Name"

[node name="NameField" type="TextEdit" parent="Name"]
margin_left = -129.905
margin_top = 57.3242
margin_right = 239.095
margin_bottom = 132.324
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Class" type="Label" parent="."]
margin_left = 596.191
margin_top = 449.721
margin_right = 729.191
margin_bottom = 479.721
text = "Choose Your Class"

[node name="ClassList" type="ItemList" parent="Class"]
margin_left = -110.733
margin_top = 60.7047
margin_right = 234.267
margin_bottom = 210.705
allow_reselect = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" parent="." instance=ExtResource( 2 )]
margin_left = 504.93
margin_top = 729.676
margin_right = 816.93
margin_bottom = 853.676

[connection signal="focus_exited" from="Name/NameField" to="." method="update_player_name"]
[connection signal="focus_exited" from="Class/ClassList" to="." method="update_player_class"]
[connection signal="pressed" from="PlayButton" to="PlayButton" method="_on_SinglePlayer_Button_pressed"]
